Creación de index.html y styles.css
Se crearon los archivos index.html y styles.css para la elaboración de
nuestra propia página web

--- a/index.html
+++ b/index.html
@@ -9,7 +9,112 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta name="keywords" content="CETis108, bachillerato, Guasave, Sinaloa">
 </head>
-<body>
-    <h1>Cesar Antonio Arias Aguilar</h1>
+<body class="cuerpo">
+    <div class="container block-center">
+        <header id="encabezado">
+        <!-- Imagen con logo sep --> 
+            <figure>
+                <img id="logo-sep" src="imagenes/avicii-logo.jpg" alt="avicii logo" width="220px">
+            </figure>
+           <!-- Textos con titulos -->
+            <div id="titulo">
+                <h1 class="electronic-music">ELECTRONIC MUSIC</h1>
+            </div>
+                <figure>
+                    <img src="imagenes/martin-garrix-logo.jpg" alt="martin garrix logo" width="220px">
+                </figure>
+        </header>
+        <main id="contenido">
+            <section id="nota-principal">
+                <img class="sombra-imagen" id="imagen"src="imagenes/electronic-music.jpg" alt="electronic music" width= 920px;>
+            </section>
+            <div class="flexible">
+                <section id="notas-secundarias">
+                    <article>
+                        <figure class="imagen-nota-secundaria">
+                            <img class="sombra-imagen" src="imagenes/tomorrowland(2).jpg" alt="tomorrowland" width="350px" height="200px">
+                        </figure>
+                        <div class="cuerpo-nota-secundaria">
+                            <h2 class="titulo-nota-secundaria">
+                                <a href="www.tomorrowland.com" target="_blank">Tomorrowland</a>
+                            </h2>
+                            <p class="intro-nota-secundaria">Tomorrowland es un festival de música electrónica celebrado anualmente en la escuela internado Boom (Bélgica). Está organizado por ID&T y Entertainment and Media Enterprise...</p>
+                            <a href="#">
+                                <div class="ver-mas">
+                                    <div>
+                                        <p>Leer más</p>
+                                    </div>
+                                </div>
+                                <audio class="audio" src="audios/Diplo%20&%20GTA%20-%20Boy%20Oh%20Boy.m4a" controls>Boy Oh Boy</audio>
+                            </a>
+                        </div>
+                    </article>
+                    <article>
+                        <figure class="imagen-nota-secundaria">
+                            <img class="sombra-imagen" src="imagenes/ultra-music-festival.jpg" alt="ultra music festival" width="350px" height="200px">
+                        </figure>
+                        <div class="cuerpo-nota-secundaria">
+                            <h2 class="titulo-nota-secundaria">
+                                <a href="www.ultramusicfestival.com" target="_blank">Ultra Music Festival</a>
+                            </h2>
+                            <p class="intro-nota-secundaria">Ultra Music Festival (UMF) es un festival anual de música electrónica, fundado en 1999 por la pareja de negocios Russel Faibisch y Alex Omes, y tiene lugar en marzo en la ciudad de Miami, Florida...</p>
+                            <a href="#">
+                                <div class="ver-mas">
+                                    <div>
+                                        <p>Leer más</p>
+                                    </div>
+                                </div>
+                                <audio class="audio" src="audios/Throttle%20-%20Money%20Maker.mp3" controls>Money Maker</audio>
+                            </a>
+                        </div>
+                    </article>
+                    <article>
+                        <figure class="imagen-nota-secundaria">
+                            <img class="sombra-imagen" src="imagenes/electric-daisy-carnival.jpg" alt="electric daisy carnival" width="350px" height="200px">
+                        </figure>
+                        <div class="cuerpo-nota-secundaria">
+                            <h2 class="titulo-nota-secundaria">
+                                <a href="www.electricdaisycarnival.com" target="_blank">Electric Daisy Carnival</a>
+                            </h2>
+                            <p class="intro-nota-secundaria">Electric Daisy Carnival (EDC) es un festival de música electrónica de baile organizado por la empresa Insomniac Events, que produjeron la primera edición del EDC en 1997 en Los Ángeles...</p>
+                            <a href="#">
+                                <div class="ver-mas">
+                                    <div>
+                                        <p>Leer más</p>
+                                    </div>
+                                </div>
+                                <audio class="audio" src="audios/Jauz%20and%20Ephwurd%20-%20Rock%20The%20Party%20(Official%20Music%20Video).mp3" controls>Rock The Party</audio>
+                            </a>
+                        </div>
+                    </article>
+                </section>
+            </div>
+            <section id="paginas-djs">
+                <figure>
+                    <a href="www.djhardwell.com" target="_blank"><img class="sombra-imagen" src="imagenes/hardwell-logo.jpg" alt="hardwell" width="220px" height="140px"></a>
+                </figure>
+                <figure>
+                    <a href="www.avicii.com" target="_blank"><img class="sombra-imagen" src="imagenes/avicii-logo.jpg" alt="avicii" width="220px" height="140px"></a>
+                </figure>
+                <figure>
+                    <a href="www.skrillex.com" target="_blank"><img class="sombra-imagen" src="imagenes/skrillex-logo.jpg" alt="skrillex" width="220px" height="140px"></a>
+                </figure>
+                <figure>
+                    <a href="www.martingarrix.com" target="_blank"><img class="sombra-imagen" src="imagenes/martin-garrix-logo.jpg" alt="martin garrix" width="220px" height="140px"></a>
+                </figure>
+            </section>
+            <audio class="audio-dj1" src="audios/Hardwell%20feat.%20Jake%20Reese%20-%20Mad%20World%20(Original%20Mix)%20%5BOUT%20NOW!%5D.m4a" controls>Mad World</audio>
+            <audio class="audio-dj2" src="audios/Avicii%20-%20The%20Nights.mp3" controls>The Nights</audio>
+            <audio class="audio-dj3" src="audios/skrillex%20-%20bangarang%20im1.mp3" controls>Bangarang</audio>
+            <audio class="audio-dj4" src="audios/Martin%20Garrix%20&%20Firebeatz%20-%20Helicopter%20(Original%20Mix).m4a" controls>Helicopter</audio>
+        </main>
+    </div>
+    <footer id="pie">
+        <div class="text-center">
+            <p>R0B0TR0N!C0 RECORDS · Guasave, Sinaloa, México · Algunos derechos reservados &copy; 2016 · Políticas de Privacidad</p>
+            <p>Guasave, Sinaloa, México - Cel. 687 122 6484</p>
+            <p>Comentarios sobre este Sitio de Internet</p>
+        </div>
+    </footer>
 </body>
 </html>
