--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
             </figure>
            <!-- Textos con titulos -->
             <div id="titulo">
-                <h1 class="electronic-music">ELECTRONIC MUSIC</h1>
+                <h1>ELECTRONIC MUSIC</h1>
+                <a href="http://www.spinninrecords.com" target="_blank"><img class="logo-encabezado" src="imagenes/spinnin-records.jpg" alt="spinnin records" width="60px" height="55px"></a>
+                <a href="http://www.revealedrecordings.com" target="_blank"><img class="logo-encabezado" src="imagenes/revealed-recordings.png" alt="revealed recordings" width="60px" height="55px"></a>
+                <a href="http://www.armadamusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/armada-music.png" alt="armada music" width="85px" height="55px"></a>
+                <a href="http://www.musicalfreedom.com" target="_blank"><img class="logo-encabezado" src="imagenes/musical-freedom.jpg" alt="musical freedom" width="55px" height="50px"></a>
+                <a href="http://www.wandwmusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/mainstage-music.png" alt="spinnin records" width="75px" height="55px"></a>
+                <a href="http://www.ultramusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/ultra-music.jpg" alt="ultra music" width="65px" height="55px"></a>
             </div>
                 <figure>
                     <img src="imagenes/martin-garrix-logo.jpg" alt="martin garrix logo" width="220px">
@@ -36,7 +42,7 @@
                         </figure>
                         <div class="cuerpo-nota-secundaria">
                             <h2 class="titulo-nota-secundaria">
-                                <a href="www.tomorrowland.com" target="_blank">Tomorrowland</a>
+                                <a href="http://www.tomorrowland.com" target="_blank">Tomorrowland</a>
                             </h2>
                             <p class="intro-nota-secundaria">Tomorrowland es un festival de música electrónica celebrado anualmente en la escuela internado Boom (Bélgica). Está organizado por ID&T y Entertainment and Media Enterprise...</p>
                             <a href="#">
@@ -55,7 +61,7 @@
                         </figure>
                         <div class="cuerpo-nota-secundaria">
                             <h2 class="titulo-nota-secundaria">
-                                <a href="www.ultramusicfestival.com" target="_blank">Ultra Music Festival</a>
+                                <a href="http://www.ultramusicfestival.com" target="_blank">Ultra Music Festival</a>
                             </h2>
                             <p class="intro-nota-secundaria">Ultra Music Festival (UMF) es un festival anual de música electrónica, fundado en 1999 por la pareja de negocios Russel Faibisch y Alex Omes, y tiene lugar en marzo en la ciudad de Miami, Florida...</p>
                             <a href="#">
@@ -74,7 +80,7 @@
                         </figure>
                         <div class="cuerpo-nota-secundaria">
                             <h2 class="titulo-nota-secundaria">
-                                <a href="www.electricdaisycarnival.com" target="_blank">Electric Daisy Carnival</a>
+                                <a href="http://www.electricdaisycarnival.com" target="_blank">Electric Daisy Carnival</a>
                             </h2>
                             <p class="intro-nota-secundaria">Electric Daisy Carnival (EDC) es un festival de música electrónica de baile organizado por la empresa Insomniac Events, que produjeron la primera edición del EDC en 1997 en Los Ángeles...</p>
                             <a href="#">
@@ -91,16 +97,16 @@
             </div>
             <section id="paginas-djs">
                 <figure>
-                    <a href="www.djhardwell.com" target="_blank"><img class="sombra-imagen" src="imagenes/hardwell-logo.jpg" alt="hardwell" width="220px" height="140px"></a>
+                    <a href="http://www.djhardwell.com" target="_blank"><img class="sombra-imagen" src="imagenes/hardwell-logo.jpg" width="220px" height="140px" onmouseover="this.src='imagenes/hardwell-rostro.jpg';" onmouseout="this.src='imagenes/hardwell-logo.jpg';"></a>
                 </figure>
                 <figure>
-                    <a href="www.avicii.com" target="_blank"><img class="sombra-imagen" src="imagenes/avicii-logo.jpg" alt="avicii" width="220px" height="140px"></a>
+                    <a href="http://www.avicii.com" target="_blank"><img class="sombra-imagen" src="imagenes/avicii-logo.jpg" alt="avicii" width="220px" height="140px" onmouseover="this.src='imagenes/avicii-rostro.jpg';" onmouseout="this.src='imagenes/avicii-logo.jpg';"></a>
                 </figure>
                 <figure>
-                    <a href="www.skrillex.com" target="_blank"><img class="sombra-imagen" src="imagenes/skrillex-logo.jpg" alt="skrillex" width="220px" height="140px"></a>
+                    <a href="http://www.skrillex.com" target="_blank"><img class="sombra-imagen" src="imagenes/skrillex-logo.jpg" alt="skrillex" width="220px" height="140px" onmouseover="this.src='imagenes/skrillex-rostro(2).jpg';" onmouseout="this.src='imagenes/skrillex-logo.jpg';"></a>
                 </figure>
                 <figure>
-                    <a href="www.martingarrix.com" target="_blank"><img class="sombra-imagen" src="imagenes/martin-garrix-logo.jpg" alt="martin garrix" width="220px" height="140px"></a>
+                    <a href="http://www.martingarrix.com" target="_blank"><img class="sombra-imagen" src="imagenes/martin-garrix-logo.jpg" alt="martin garrix" width="220px" height="140px" onmouseover="this.src='imagenes/martin-garrix-rostro.jpg';" onmouseout="this.src='imagenes/martin-garrix-logo.jpg';"></a>
                 </figure>
             </section>
             <audio class="audio-dj1" src="audios/Hardwell%20feat.%20Jake%20Reese%20-%20Mad%20World%20(Original%20Mix)%20%5BOUT%20NOW!%5D.m4a" controls>Mad World</audio>
