--- a/index.html
+++ b/index.html
@@ -19,12 +19,28 @@
            <!-- Textos con titulos -->
             <div id="titulo">
                 <h1>ELECTRONIC MUSIC</h1>
-                <a href="http://www.spinninrecords.com" target="_blank"><img class="logo-encabezado" src="imagenes/spinnin-records.jpg" alt="spinnin records" width="60px" height="55px"></a>
-                <a href="http://www.revealedrecordings.com" target="_blank"><img class="logo-encabezado" src="imagenes/revealed-recordings.png" alt="revealed recordings" width="60px" height="55px"></a>
-                <a href="http://www.armadamusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/armada-music.png" alt="armada music" width="85px" height="55px"></a>
-                <a href="http://www.musicalfreedom.com" target="_blank"><img class="logo-encabezado" src="imagenes/musical-freedom.jpg" alt="musical freedom" width="55px" height="50px"></a>
-                <a href="http://www.wandwmusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/mainstage-music.png" alt="spinnin records" width="75px" height="55px"></a>
-                <a href="http://www.ultramusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/ultra-music.jpg" alt="ultra music" width="65px" height="55px"></a>
+                <nav>
+                    <section id="disqueras">
+                        <figure>
+                           <a href="http://www.spinninrecords.com" target="_blank"><img class="logo-encabezado" src="imagenes/spinnin-records.jpg" alt="spinnin records" width="60px" height="55px"></a>
+                        </figure>
+                        <figure>
+                            <a href="http://www.revealedrecordings.com" target="_blank"><img class="logo-encabezado" src="imagenes/revealed-recordings.png" alt="revealed recordings" width="60px" height="55px"></a>
+                        </figure>
+                        <figure>
+                            <a href="http://www.armadamusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/armada-music.png" alt="armada music" width="85px" height="55px"></a>
+                        </figure>
+                        <figure>
+                            <a href="http://www.musicalfreedom.com" target="_blank"><img class="logo-encabezado" src="imagenes/musical-freedom.jpg" alt="musical freedom" width="55px" height="50px"></a>
+                        </figure>
+                        <figure>
+                            <a href="http://www.wandwmusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/mainstage-music.png" alt="spinnin records" width="75px" height="55px"></a>
+                        </figure>
+                        <figure>
+                            <a href="http://www.ultramusic.com" target="_blank"><img class="logo-encabezado" src="imagenes/ultra-music.jpg" alt="ultra music" width="65px" height="55px"></a>
+                        </figure>
+                    </section>
+                </nav>
             </div>
                 <figure>
                     <img src="imagenes/martin-garrix-logo.jpg" alt="martin garrix logo" width="220px">
@@ -109,10 +125,12 @@
                     <a href="http://www.martingarrix.com" target="_blank"><img class="sombra-imagen" src="imagenes/martin-garrix-logo.jpg" alt="martin garrix" width="220px" height="140px" onmouseover="this.src='imagenes/martin-garrix-rostro.jpg';" onmouseout="this.src='imagenes/martin-garrix-logo.jpg';"></a>
                 </figure>
             </section>
-            <audio class="audio-dj1" src="audios/Hardwell%20feat.%20Jake%20Reese%20-%20Mad%20World%20(Original%20Mix)%20%5BOUT%20NOW!%5D.m4a" controls>Mad World</audio>
-            <audio class="audio-dj2" src="audios/Avicii%20-%20The%20Nights.mp3" controls>The Nights</audio>
-            <audio class="audio-dj3" src="audios/skrillex%20-%20bangarang%20im1.mp3" controls>Bangarang</audio>
-            <audio class="audio-dj4" src="audios/Martin%20Garrix%20&%20Firebeatz%20-%20Helicopter%20(Original%20Mix).m4a" controls>Helicopter</audio>
+            <section id="audio">
+                <audio class="audio-dj1" src="audios/Hardwell%20feat.%20Jake%20Reese%20-%20Mad%20World%20(Original%20Mix)%20%5BOUT%20NOW!%5D.m4a" controls>Mad World</audio>
+                <audio class="audio-dj2" src="audios/Avicii%20-%20The%20Nights.mp3" controls>The Nights</audio>
+                <audio class="audio-dj3" src="audios/skrillex%20-%20bangarang%20im1.mp3" controls>Bangarang</audio>
+                <audio class="audio-dj4" src="audios/Martin%20Garrix%20&%20Firebeatz%20-%20Helicopter%20(Original%20Mix).m4a" controls>Helicopter</audio>
+            </section>
         </main>
     </div>
     <footer id="pie">
